changes to /sellers and text align fix in create listing table

--- a/server/public/sass/bulma/sass/elements/table.sass
+++ b/server/public/sass/bulma/sass/elements/table.sass
@@ -66,7 +66,6 @@
     color: $text
     font-weight: bold
     padding: 12px 10px
-    text-align: left
   thead
     border-bottom: 2px solid $border
     &.has-shadow
